--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         <section class="elements">
             <div class="element">
-                <img class="element__image" src="images/karachaevsk.png" alt="Руины на фоне гор">
+                <img class="element__image" src="images/karachaevsk-town.png" alt="Руины на фоне гор">
                 <div class="element__item">
                     <h2 class="element__name">Карачаевск</h2>
                     <button class="element__button"></button>
