--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="./images/logo.png" alt="Логотип">
+        <img class="header__logo" src="./images/logo.svg" alt="Логотип">
     </header>
     <main class="content">
         <section class="profile">
@@ -79,8 +79,8 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form">
                 <fieldset class="popup__item">
-                    <input class="popup__input popup__input_name" name="name" type="text" placeholder="Имя">
-                    <input class="popup__input popup__input_about" name="about" type="text" placeholder="О себе">
+                    <input class="popup__input popup__input_name_name" name="name" type="text" placeholder="Имя">
+                    <input class="popup__input popup__input_name_about" name="about" type="text" placeholder="О себе">
                     <button type="submit" class="popup__submit">Сохранить</button>
                 </fieldset>
             </form>
