--- a/index.html
+++ b/index.html
@@ -25,59 +25,17 @@
             <button type="button" class="profile__button profile__add-button"></button>
         </section>
         <section class="elements">
-            <div class="element">
-                <img class="element__image" src="./images/karachaevsk-town.png" alt="Руины на фоне гор">
-                <div class="element__item">
-                    <h2 class="element__name">Карачаевск</h2>
-                    <button type="button" class="element__button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/elbrus.png" alt="Гора Эльбрус на дальнем горизонте">
-                <div class="element__item">
-                    <h2 class="element__name">Гора Эльбрус</h2>
-                    <button type="button" class="element__button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/dombay.png" alt="Изображение горы в облаках">
-                <div class="element__item">
-                    <h2 class="element__name">Домбай</h2>
-                    <button type="button" class="element__button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/solonchak.jpg"
-                    alt="Изображение на которомос небо сливается с землей">
-                <div class="element__item">
-                    <h2 class="element__name">Солончак в Боливии</h2>
-                    <button type="button" class="element__button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/alpi.jpg" alt="Домик в горах">
-                <div class="element__item">
-                    <h2 class="element__name">Альпы</h2>
-                    <button type="button" class="element__button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/sahara.jpg" alt="Песчаное море">
-                <div class="element__item">
-                    <h2 class="element__name">Пустыня Сахара</h2>
-                    <button type="button" class="element__button"></button>
-                </div>
-            </div>
+            
         </section>
     </main>
     <footer class="footer">
         <p class="footer__copyright" lang="en">&copy;&nbsp;2022 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup-edit">
         <div class="popup__container">
-            <button type="button" class="popup__close"></button>
+            <button type="button" class="popup__close popup-edit__close"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__form">
+            <form class="popup__form popup-edit__form">
                 <fieldset class="popup__item">
                     <input class="popup__input popup__input_name_name" name="name" type="text" placeholder="Имя">
                     <input class="popup__input popup__input_name_about" name="about" type="text" placeholder="О себе">
@@ -86,6 +44,36 @@
             </form>
         </div>
     </div>
+    <div class="popup popup-add">
+        <div class="popup__container">
+            <button type="button" class="popup__close popup-add__close"></button>
+            <h2 class="popup__title">Новое место</h2>
+            <form class="popup__form popup-add__form">
+                <fieldset class="popup__item">
+                    <input class="popup__input popup__input_name_place-name" name="place-name" type="text" placeholder="Название">
+                    <input class="popup__input popup__input_name_link" name="link" type="text" placeholder="Ссылка на картику">
+                    <button type="submit" class="popup__submit">Сохранить</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+    <div class="popup popup-zoom">
+        <div class="popup-zoom__container">
+            <button type="button" class="popup__close popup-zoom__close"></button>
+            <img class="popup-zoom__image" src="">
+            <h2 class="popup-zoom__title"></h2>
+        </div>
+    </div>
+    <template id="new-cards">
+        <div class="element">
+            <img class="element__delete" src="./images/trash.svg">
+            <img class="element__image" src="">
+            <div class="element__item">
+                <h2 class="element__name"></h2>
+                <button type="button" class="element__button"></button>
+            </div>
+        </div>
+    </template>
     <script src="./script.js"></script>
 </body>
 
