develop-second-part

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
     <div class="popup popup-zoom">
         <div class="popup-zoom__container">
             <button type="button" class="popup__close popup-zoom__close"></button>
-            <img class="popup-zoom__image" src="">
+            <img class="popup-zoom__image">
             <h2 class="popup-zoom__title"></h2>
         </div>
     </div>
     <template id="new-cards">
         <div class="element">
             <img class="element__delete" src="./images/trash.svg">
-            <img class="element__image" src="">
+            <img class="element__image">
             <div class="element__item">
                 <h2 class="element__name"></h2>
                 <button type="button" class="element__button"></button>
