--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button type="button" class="profile__button profile__add-button"></button>
         </section>
         <section class="elements">
-            
+
         </section>
     </main>
     <footer class="footer">
@@ -50,8 +50,10 @@
             <h2 class="popup__title">Новое место</h2>
             <form class="popup__form popup-add__form">
                 <fieldset class="popup__item">
-                    <input class="popup__input popup__input_name_place-name" name="place-name" type="text" placeholder="Название">
-                    <input class="popup__input popup__input_name_link" name="link" type="text" placeholder="Ссылка на картику">
+                    <input class="popup__input popup__input_name_place-name" name="place-name" type="text"
+                        placeholder="Название">
+                    <input class="popup__input popup__input_name_link" name="link" type="text"
+                        placeholder="Ссылка на картику">
                     <button type="submit" class="popup__submit">Сохранить</button>
                 </fieldset>
             </form>
@@ -60,21 +62,21 @@
     <div class="popup popup-zoom">
         <div class="popup-zoom__container">
             <button type="button" class="popup__close popup-zoom__close"></button>
-            <img class="popup-zoom__image">
+            <img class="popup-zoom__image" alt="Карточка">
             <h2 class="popup-zoom__title"></h2>
         </div>
     </div>
     <template id="new-cards">
         <div class="element">
             <img class="element__delete" src="./images/trash.svg">
-            <img class="element__image">
+            <img class="element__image" alt="Карточка">
             <div class="element__item">
                 <h2 class="element__name"></h2>
                 <button type="button" class="element__button"></button>
             </div>
         </div>
     </template>
-    <script src="./script.js"></script>
+    <script src="./src/script.js"></script>
 </body>
 
 </html>
