--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
         <div class="popup__container">
             <button type="button" class="popup__close popup-edit__close"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__form popup-edit__form">
+            <form class="popup__form popup-edit__form" novalidate>
                 <fieldset class="popup__item">
-                    <input class="popup__input popup__input_name_name" name="name" type="text" placeholder="Имя">
-                    <input class="popup__input popup__input_name_about" name="about" type="text" placeholder="О себе">
+                    <input id="name-input" class="popup__input popup__input_name_name" name="name" type="text" placeholder="Имя"
+                        required minlength="2" maxlength="40">
+                        <span class="name-input-error popup__input-error"></span>
+                    <input id="about-input" class="popup__input popup__input_name_about" name="about" type="text" placeholder="О себе"
+                        required minlength="2" maxlength="200">
+                        <span class="about-input-error popup__input-error"></span>
                     <button type="submit" class="popup__submit">Сохранить</button>
                 </fieldset>
             </form>
@@ -48,12 +52,14 @@
         <div class="popup__container">
             <button type="button" class="popup__close popup-add__close"></button>
             <h2 class="popup__title">Новое место</h2>
-            <form class="popup__form popup-add__form">
+            <form class="popup__form popup-add__form" novalidate>
                 <fieldset class="popup__item">
-                    <input class="popup__input popup__input_name_place-name" name="place-name" type="text"
-                        placeholder="Название">
-                    <input class="popup__input popup__input_name_link" name="link" type="text"
-                        placeholder="Ссылка на картику">
+                    <input id="place-name-input" class="popup__input popup__input_name_place-name" name="place-name" type="text"
+                        placeholder="Название" required minlength="2" maxlength="30">
+                        <span class="place-name-input-error popup__input-error"></span>
+                    <input id="link-input" class="popup__input popup__input_name_link" name="link" type="url"
+                        placeholder="Ссылка на картику" required>
+                        <span class="link-input-error popup__input-error"></span>
                     <button type="submit" class="popup__submit">Сохранить</button>
                 </fieldset>
             </form>
@@ -77,6 +83,7 @@
         </div>
     </template>
     <script src="./src/script.js"></script>
+    <script src="./src/validate.js"></script>
 </body>
 
 </html>
