develop-third-part

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <input id="about-input" class="popup__input popup__input_name_about" name="about" type="text" placeholder="О себе"
                         required minlength="2" maxlength="200">
                         <span class="about-input-error popup__input-error"></span>
-                    <button type="submit" class="popup__submit">Сохранить</button>
+                    <button type="submit" class="popup__submit popup-edit__submit">Сохранить</button>
                 </fieldset>
             </form>
         </div>
@@ -60,7 +60,7 @@
                     <input id="link-input" class="popup__input popup__input_name_link" name="link" type="url"
                         placeholder="Ссылка на картику" required>
                         <span class="link-input-error popup__input-error"></span>
-                    <button type="submit" class="popup__submit">Сохранить</button>
+                    <button type="submit" class="popup__submit popup-add__submit">Сохранить</button>
                 </fieldset>
             </form>
         </div>
