--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
             </div>
         </div>
     </template>
-    <script src="./src/script.js"></script>
+    <script type="module" src="./src/index.js"></script>
     <script src="./src/validate.js"></script>
+    <script src="./src/card.js"></script>
 </body>
 
 </html>
