--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
     <title lang="ru">Место</title>
 </head>
 
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="./images/logo.svg" alt="Логотип">
+        <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип"> 
     </header>
     <main class="content">
         <section class="profile">
             <div class="profile__user">
-                <img class="profile__avatar" src="./images/avatar.png" alt="Ваш Аватар">
+                <img class="profile__avatar" src="<%=require('./images/avatar.png')%>" alt="Ваш Аватар">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button type="button" class="profile__button profile__edit-button"></button>
@@ -54,7 +53,7 @@
             <h2 class="popup__title">Новое место</h2>
             <form class="popup__form popup-add__form" novalidate>
                 <fieldset class="popup__item">
-                    <input id="place-name-input" class="popup__input popup__input_name_place-name" name="place-name" type="text"
+                    <input id="place-name-input" class="popup__input popup__input_name_place-name" name="place" type="text"
                         placeholder="Название" required minlength="2" maxlength="30">
                         <span class="place-name-input-error popup__input-error"></span>
                     <input id="link-input" class="popup__input popup__input_name_link" name="link" type="url"
@@ -74,7 +73,7 @@
     </div>
     <template id="new-cards">
         <div class="element">
-            <img class="element__delete" src="./images/trash.svg">
+            <img class="element__delete" src="<%=require('./images/trash.svg')%>">
             <img class="element__image">
             <div class="element__item">
                 <h2 class="element__name"></h2>
@@ -82,7 +81,6 @@
             </div>
         </div>
     </template>
-    <script type="module" src="./src/index.js"></script>
 </body>
 
 </html>
