--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
             <form class="popup__form popup-avatar__form" novalidate>
                 <fieldset class="popup__item">
                     <input id="popup-avatar__input" class="popup__input popup__input_new-avatar" name="avatar"
-                        type="src" placeholder="Название" required>
+                        type="url" placeholder="Название" required>
                         <span class="popup-avatar__input-error popup__input-error"></span>
                     <button type="submit" class="popup__submit popup-avatar__submit">Сохранить</button>
                 </fieldset>
